@@ -1,3 +1,10 @@
+2005-04-07  Andreas Seltenreich  <seltenreich@gmx.de>
+
+	* shimbun/sb-laut-de.el (shimbun-laut-de-content-start): Also
+	match on group "news".
+	(shimbun-headers): Remove stub code.
+	(shimbun-clear-contents): Added.
+
 2005-04-08  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m.el (w3m-decode-buffer): Decode `&#nnn;' entities in 128..159.
